--- a/src/scss/_05-components.scss
+++ b/src/scss/_05-components.scss
@@ -228,6 +228,10 @@ a {
 </div>
 */
 .frame {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   padding: 10px;
   max-width: 465px;
   background-color: $white;
